# embedded-storage

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
embedded-storage-async/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
embedded-storage-async/src/: lib.rs  nor_flash.rs
src/: block.rs  iter.rs  lib.rs  nor_flash.rs
